# BhuGyan-Pipeline

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml  requirements.txt
data/sample/: content.csv  places.geojson
db/: Dockerfile
migrations/: 001_extensions.sql  002_places.sql  003_content.sql  004_indexes.sql
output/media/: places.geojson
src/bhugyan/: __init__.py  cli.py  config.py  db.py
src/bhugyan/extract/: __init__.py  pdf_to_csv.py  question_bank.py
src/bhugyan/llm/: __init__.py  client.py
src/bhugyan/loader/: __init__.py  common_loader.py  dedupe.py  embeddings.py  load.py  resolve.py  schema.py  validate.py
src/bhugyan/observability/: __init__.py  reporter.py
src/bhugyan/pipelines/: __init__.py  base.py  p1_places.py  p2_content.py  p3_questions.py  p4_current_affairs.py  p5_media.py
tests/: test_loader_units.py
tools/: dry_run_step1.py  make_test_pdf.py  make_test_pyq.py  make_test_qbank.py
